base mapping of files

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 
 	<title>Lucas Laibly | engineer</title>
 
-	<link rel='icon' type='image/png' href='/public/assests/icons/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
+	<link rel='icon' type='image/png' href='./assests/icons/favicon.png'>
+	<link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
