--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Lucas Laibly | engineer</title>
+	<title>Lucas Laibly | coder</title>
 
 	<link rel='icon' type='image/png' href='./assests/icons/favicon.png'>
 	<link rel='stylesheet' href='./css/global.css'>
