favicon added yeyeye

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Lucas Laibly | coder</title>
 
-	<link rel='icon' type='image/png' href='./assests/icons/favicon.png'>
+	<link rel='icon' type='image/png' href='./assests/icons/favicon.ico'>
 	<link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
